Add missing height property

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: #a0b5c4;
+    height: 100vh;
 }
 
 .text-wrapper {
